--- a/config.json
+++ b/config.json
@@ -1,28 +1,80 @@
 {
+  "nyc": [
+    {
+      "height": 4807,
+      "compressed_path": "./photos/nyc/2017-09-DSC_8537.min.jpg",
+      "width": 3184,
+      "compressed": false,
+      "placeholder_path": "./photos/nyc/2017-09-DSC_8537.placeholder.jpg",
+      "path": "./photos/nyc/2017-09-DSC_8537.jpg"
+    }
+  ],
   "travel": [
     {
+      "height": 3100,
+      "compressed_path": "./photos/travel/2019-03-DSC_4311.min.jpg",
+      "width": 4680,
+      "compressed": false,
+      "placeholder_path": "./photos/travel/2019-03-DSC_4311.placeholder.jpg",
+      "path": "./photos/travel/2019-03-DSC_4311.jpg"
+    },
+    {
       "height": 3034,
-      "compressed_path": "./photos/travel/DSC_7163.min.jpg",
+      "compressed_path": "./photos/travel/2017-05-DSC_7163.min.jpg",
       "width": 4581,
       "compressed": false,
-      "placeholder_path": "./photos/travel/DSC_7163.placeholder.jpg",
-      "path": "./photos/travel/DSC_7163.jpg"
+      "placeholder_path": "./photos/travel/2017-05-DSC_7163.placeholder.jpg",
+      "path": "./photos/travel/2017-05-DSC_7163.jpg"
     },
     {
       "height": 4934,
-      "compressed_path": "./photos/travel/DSC_5704.min.jpg",
+      "compressed_path": "./photos/travel/2019-08-DSC_5704.min.jpg",
       "width": 3195,
       "compressed": false,
-      "placeholder_path": "./photos/travel/DSC_5704.placeholder.jpg",
-      "path": "./photos/travel/DSC_5704.jpg"
+      "placeholder_path": "./photos/travel/2019-08-DSC_5704.placeholder.jpg",
+      "path": "./photos/travel/2019-08-DSC_5704.jpg"
+    }
+  ],
+  "food + drink": [
+    {
+      "height": 2856,
+      "compressed_path": "./photos/food + drink/2018-05-DSC_1757.min.jpg",
+      "width": 4312,
+      "compressed": false,
+      "placeholder_path": "./photos/food + drink/2018-05-DSC_1757.placeholder.jpg",
+      "path": "./photos/food + drink/2018-05-DSC_1757.jpg"
     },
     {
-      "height": 3100,
-      "compressed_path": "./photos/travel/DSC_4311.min.jpg",
-      "width": 4680,
+      "height": 2832,
+      "compressed_path": "./photos/food + drink/2020-04-DSC_2269.min.jpg",
+      "width": 4256,
       "compressed": false,
-      "placeholder_path": "./photos/travel/DSC_4311.placeholder.jpg",
-      "path": "./photos/travel/DSC_4311.jpg"
+      "placeholder_path": "./photos/food + drink/2020-04-DSC_2269.placeholder.jpg",
+      "path": "./photos/food + drink/2020-04-DSC_2269.jpg"
+    },
+    {
+      "height": 2545,
+      "compressed_path": "./photos/food + drink/2020-04-DSC_2215.min.jpg",
+      "width": 3825,
+      "compressed": false,
+      "placeholder_path": "./photos/food + drink/2020-04-DSC_2215.placeholder.jpg",
+      "path": "./photos/food + drink/2020-04-DSC_2215.jpg"
+    },
+    {
+      "height": 2832,
+      "compressed_path": "./photos/food + drink/2020-04-DSC_2274.min.jpg",
+      "width": 4256,
+      "compressed": false,
+      "placeholder_path": "./photos/food + drink/2020-04-DSC_2274.placeholder.jpg",
+      "path": "./photos/food + drink/2020-04-DSC_2274.jpg"
+    },
+    {
+      "height": 3434,
+      "compressed_path": "./photos/food + drink/2018-05-DSC_1773.min.jpg",
+      "width": 5184,
+      "compressed": false,
+      "placeholder_path": "./photos/food + drink/2018-05-DSC_1773.placeholder.jpg",
+      "path": "./photos/food + drink/2018-05-DSC_1773.jpg"
     }
   ]
 }
