--- a/_config.yml
+++ b/_config.yml
@@ -58,4 +58,4 @@ category_dir: /
 baseurl: /
 
 # The URL of your actual domain. This will be used to make absolute links in the RSS feed.
-# url: http://amyhhuaphoto.github.io/gallery
+# url: http://amyhhuaphoto.github.io
